--- a/src/Styles/Style.css
+++ b/src/Styles/Style.css
@@ -47,6 +47,27 @@
     align-items: center;
 }
 
-.Image-Container{
-    
+.BannerContainer{
+    display: grid;
+    grid-template-rows: repeat(2, 1fr);
+    height: 300px;
 }
+
+.BannerContainer-Picture{
+    grid-area: 1/1/3/3;
+}
+
+.BannerContainer-Text{
+    grid-area: 1/1/3/3;
+}
+
+
+.BannerContainer-Picture > img{
+    width: 100%;
+}
+
+.BannerContainer-text > p{
+    color: gray;
+    border-bottom: solid gray;
+}
+
