--- a/src/Styles/Style.css
+++ b/src/Styles/Style.css
@@ -49,7 +49,7 @@
     align-items: center;
 }
 
-
+/* This is Image And Text component css styles */
 .BannerContainer{
     display: grid;
     grid-template-rows: repeat(1, 1fr);
@@ -78,10 +78,15 @@
     margin-bottom: 5px;  
 }
 
-.BannerContainer-Picture > img{
-    width: 100%;
+.BannerContainer-Picture{
+    height: 350px;
 }
 
+.BannerContainer-Picture > img{
+    height: 100%;
+}
+
+/* This is grid products component css */
 .ProductImageContainer{
     display: grid;
     grid-template-rows: repeat(1, 1fr);
@@ -103,11 +108,13 @@
     font-size: 12px;
 }
 
+/* Grid Porducts component css */
 .OwnProducts{
-    background-color: var(--cream);
+    background-color: brown;
     display: flex;
     align-items: center;
     flex-direction: column;
+    height: 450px;
 }
 
 .OwnProductsContainer{
@@ -116,8 +123,8 @@
 
 .OwnProductsContainer-Images{
     display: grid;
-    grid-template-columns: 50% 50%;
-    grid-template-rows: 50% 200px;
+    grid-template-columns: auto auto;
+    grid-template-rows: auto auto;
     gap: 5px;
 }
 
