--- a/src/Styles/Style.css
+++ b/src/Styles/Style.css
@@ -90,6 +90,7 @@
 .ProductImageContainer{
     display: grid;
     grid-template-rows: repeat(1, 1fr);
+    height: 210px;
 }
 
 .ProductImageContainer > img{
@@ -114,24 +115,23 @@
     display: flex;
     align-items: center;
     flex-direction: column;
-    height: 450px;
+    height: 500px;
 }
 
 .OwnProductsContainer{
+    padding: 5px;
     width: 95%;
 }
 
 .OwnProductsContainer-Images{
     display: grid;
-    grid-template-columns: auto auto;
-    grid-template-rows: auto auto;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(2, 1fr);
     gap: 5px;
 }
 
 .AllScreen{
-    grid-area: 1/1/1/3;
-    grid-row: 2/2;
-    margin-bottom: 15px;
+    grid-area: 2/1/2/2 span;
 }
 
 /* everything below are styles for Carrousel component */
